tools/devpi/deployment/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: devpi
  labels:
    app: devpi
spec:
  selector:
    app: devpi
  ports:
    - name: pypi
      port: 3141
      targetPort: 3141
      protocol: TCP
    - name: ttyd
      port: 7681
      targetPort: 7681
      protocol: TCP
